Working prototype of activity scheduler/planner chrome extension

--- a/activity-scheduler-plugin/manifest.json
+++ b/activity-scheduler-plugin/manifest.json
@@ -1,26 +1,15 @@
 {
-    "manifest_version": 3,
-    "name": "Activity Scheduler",
-    "version": "1.0",
-    "description": "A smart activity scheduler that can decompose tasks and execute them",
-    "permissions": [
-        "activeTab",
-        "storage"
-    ],
-    "action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "16": "images/icon16.png",
-            "48": "images/icon48.png",
-            "128": "images/icon128.png"
-        }
-    },
-    "icons": {
-        "16": "images/icon16.png",
-        "48": "images/icon48.png",
-        "128": "images/icon128.png"
-    },
-    "content_security_policy": {
-        "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
-    }
+  "manifest_version": 3,
+  "name": "Activity Planner",
+  "version": "1.0",
+  "description": "Plan and execute activities with AI assistance",
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "permissions": [
+    "activeTab"
+  ],
+  "host_permissions": [
+    "http://127.0.0.1:5000/*"
+  ]
 }
